@@ -13,6 +13,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import static dev.langchain4j.internal.Exceptions.illegalArgument;
 import static dev.langchain4j.internal.Utils.getOrDefault;
@@ -125,7 +126,7 @@ public class ReRankingContentAggregator implements ContentAggregator {
 
         List<TextSegment> segments = contents.stream()
                 .map(Content::textSegment)
-                .toList();
+                .collect(Collectors.toList());
 
         List<Double> scores = scoringModel.scoreAll(segments, query.text()).content();
 
@@ -139,7 +140,7 @@ public class ReRankingContentAggregator implements ContentAggregator {
                 .sorted(Map.Entry.<TextSegment, Double>comparingByValue().reversed())
                 .map(entry -> new Content(entry.getKey(), Map.of(ContentMetadata.RERANKED_SCORE, entry.getValue())))
                 .limit(maxResults)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static class ReRankingContentAggregatorBuilder {
